# 005-express-pickup

./: BRIEF.md  README.md  capacitor.config.ts  package-lock.json  package.json
android/app/: build.gradle
android/app/src/main/java/com/aiprojects/expresspickup/: MainActivity.java
android/app/src/main/res/values/: strings.xml
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src/app/: layout.tsx  page.tsx
src/lib/: pickup-engine.ts
